style/promo/__content/promo__content.css
.promo__content {
  margin: 60px 0;
  display: grid;
  grid-template-columns: 2fr 1fr;
}


@media screen and (max-width: 768px) {
  .promo__content {
    grid-template-columns: 1fr;
    grid-auto-flow: dense;
  }
}

